# dominion.zone

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.sqlx/: query-10fd11af9fbb4905039417a2652d0507de7b3af17cca10d0878e09a781562c87.json  query-3718fbcce87475351c0a28452f2f14a19aa9421a8f88589312cab9852fa0dc22.json  query-3f08993906b4e240ca0117a4ab24dbd937444d1fe23ad765057bab220d4f34a8.json  query-42bbb088f37160802eb5667328b00921615f9bbba1cdb0d738c0ec522be0cfc3.json  query-6f3c91c5a83e77f23026f3d62b6756e6c27a1f37ecc2c6090acd86778957f9cc.json  query-7a348c03e6093c3dfeb6ba478ba4b9b32e1dc4e5989bb5c7b07db51f4b8beafb.json  query-7cae38fd13332c2c58367594858f6d6b3ba6170876627d237f7dc1ae27108d53.json  query-90a5e805000ab6790c25bfc4d345be326301028343bd02dc4498db37a8e89aea.json  query-b96b71f23aa39e4760c82c23a65cde232a6fe4b210e8f6902ef695143d0daf65.json  query-c4bd16575ecdfcd166f3276c3784ac384d49b0cc1547b108cce774bfc7ae67f7.json  query-cb65cc7774c321cf94634ad32fb85a29d74e3bc8f7697fe7d9f5131553c28830.json  query-ceccf5b1c881ef939647dde804bbb691b7d04c399e232bd5ebfda0d46c77f1fc.json  query-dcdbdb28d6f987e30de96280731a598821e91e0f1dd557b06f4e0adc61eef556.json  query-f213fe4e573fa0483a97a462f61945f4fea69c9a4cc01a5da1bb985d1bc323a2.json
rs/dominion-protector/: Cargo.toml  prompts.yaml
rs/dominion-protector/.sqlx/: query-0bd1eddccb31bcef916e3ad62c2030ea57fbb691cff8ebc95a1be769825403a6.json  query-362e38e6a2e441b2511c09df4acb75bbc218ea6be73380cd7bd39ac4372586f1.json  query-56b8d385286711e1691d2f350a8999cfcb6414e0df702d23251b8e9f5cd94e50.json  query-5d94a7c619597763b5b19a5adb98e472d30449bb25367ac9d7b5be763c0cd316.json  query-99238a268681d8ddb849f4881c48437f0be553165e4418ef19e477fc4f29087d.json  query-9e99d5b13975f6439efb132fb4f862b3af250e8142710c6ca3c351e7d01ea1d4.json  query-a81d2d86915f07738d0816f3cf91c761ca320c3a1ebb99a1b9fb7dac56f23cc4.json  query-ae3448d3b2d3e384c94606bb1373476261a35a350acac0138135cb54c44753e0.json  query-ceccf5b1c881ef939647dde804bbb691b7d04c399e232bd5ebfda0d46c77f1fc.json  query-dc6eb770ff14d6c116a9ed716cb0a28aa7f0c5818f0529acec39c8165559ae91.json  query-f332f855e24d72df99f46c5b4895e22901ddc282bdbca7b4d530b88e7e4ac672.json  query-f59ddae0137fa3c6441fee7f8cf32a10a1a8f0126f2f03ea788b85308f7f93c2.json  query-fc84791e84e10f3919645e97c9c869ed12368c93e28b2d6cb3a458864c034294.json
rs/dominion-protector/migrations/: 20250215114042_objects_table.down.sql  20250215114042_objects_table.up.sql  20250215153352_package_modules_table.down.sql  20250215153352_package_modules_table.up.sql  20250215154732_structures.down.sql  20250215154732_structures.up.sql  20250215155140_package_linkage_table.down.sql  20250215155140_package_linkage_table.up.sql  20250216135600_functions_table.down.sql  20250216135600_functions_table.up.sql  20250216135635_structures_usage_table.down.sql  20250216135635_structures_usage_table.up.sql  20250405190656_module_sources_table.down.sql  20250405190656_module_sources_table.up.sql
rs/dominion-protector/src/: ai.rs  lib.rs  main.rs  prompts.rs  sui_client.rs
rs/dominion-protector/src/commands/: clear.rs  decompile.rs  describe.rs  download.rs  experiment.rs  mod.rs  serve.rs  watch.rs
rs/dominion-protector/src/commands/describe/: full_module.rs  mod.rs  module.rs  structure.rs
rs/dominion-protector/src/commands/serve/: error.rs  known_packages.rs  mod.rs  module_description.rs  package_description.rs  state.rs
rs/dominion-protector/src/db/: descriptions.rs  full_module.rs  full_object.rs  function.rs  mod.rs  object.rs  objects.rs  package_linkage.rs  package_module.rs  sources.rs  structure.rs
rs/dominion-protector/src/db/descriptions/: full_function.rs  full_module.rs  function.rs  function_entity.rs  mod.rs  module.rs  security_level.rs  structure.rs
rs/dominion-protector/src/decompiler/: mod.rs  revela.rs  smt.rs
rs/service/: Cargo.toml
rs/service/src/: main.rs  state.rs
rs/snapshot-reader/: Cargo.toml
rs/snapshot-reader/src/: main.rs
rs/welldone-sources/: Cargo.toml
rs/welldone-sources/src/: main.rs
smt/: system.smt2
sui/scamtest/: Move.toml
sui/scamtest/sources/: scamtest.move  tst.move  win.move
sui/scamtest/tests/: scamtest_tests.move
ts/app/: .eslintrc.json  index.html  package.json  vite.config.ts
ts/app/public/: dominion.png:Zone.Identifier
ts/app/src/: app.tsx  index.css  index.tsx
ts/app/src/components/: AppBar.tsx  KnownPackageSelector.tsx  ModuleDescriptionView.tsx  PackageDescriptionView.tsx  Sidebar.tsx  StructDescriptionView.tsx
ts/app/src/data/: KnownPackages.ts  ModuleDescription.ts  SuiObject.ts  client.ts
ts/app/src/pages/: contacts.tsx  docs.tsx  explorer.tsx  index.tsx  roadmap.tsx  wallet-protector.tsx
ts/app/src/stores/: suiClient.ts
ts/app/src/styles/: AppBar.module.css  AppBar.module.css.d.ts  Sidebar.module.css  Sidebar.module.css.d.ts
ts/dominion-protector-chrome/: index.html  manifest.json  package.json  tsconfig.json  vite-dominion.config.ts  vite.config.ts
ts/dominion-protector-chrome/public/: dominion.js
ts/dominion-protector-chrome/src/: index.css  index.tsx
ts/dominion-protector-chrome/src/pages/: transaction.tsx
ts/dominion-protector-chrome/src/styles/: transaction.module.css  transaction.module.css.d.ts
ts/scamtest-app/: globals.d.ts  index.html  package.json  test.html
ts/scamtest-app/public/: config.js
ts/scamtest-app/src/: app.tsx  index.css  index.tsx
ts/scamtest-app/src/components/: AppBar.tsx  AppToaster.tsx  CheckNetworkSection.tsx  ConnectSection.tsx  MintTestCoinSection.tsx  RunScamSection.tsx
ts/scamtest-app/src/contexts/: Notifications.tsx
ts/scamtest-app/src/data/: CoinBalance.ts  CoinMetadata.ts  SuiObject.ts  TotalSupply.ts
ts/scamtest-cli/: config.json  package.json  tsconfig.json
ts/scamtest-cli/src/: cli.ts  config.ts  context.ts  index.ts  newOperator.ts  serve.ts
ts/scamtest-sdk/: package.json  tsconfig.json
ts/scamtest-sdk/src/: index.ts
ts/solid-sui/: package.json  tsconfig.json  vite.config.ts
ts/solid-sui/lib/: index.ts
ts/solid-sui/src/: index.tsx
(+27 files in other folders)
