[workspace]
resolver = "2"

members = [
    "rs/dominion-protector",
    "rs/third-party/move-core-types",
    "rs/third-party/move-ir-types",
    "rs/third-party/move-binary-format",
    "rs/third-party/move-bytecode-source-map",
    "rs/third-party/move-command-line-common",
    "rs/third-party/move-compiler",
    "rs/third-party/move-model",
    "rs/third-party/move-model-2",
    "rs/third-party/move-proc-macros",
    "rs/third-party/move-stackless-bytecode",
    "rs/third-party/move-symbol-pool",
    # "rs/third-party/revela",
    "rs/third-party/enum-compat-util",
    "rs/third-party/move-borrow-graph",
    "rs/third-party/move-bytecode-verifier",
    "rs/third-party/move-ir-to-bytecode",
    "rs/third-party/move-stdlib",
    "rs/third-party/move-abstract-interpreter",
    "rs/third-party/move-abstract-stack",
    "rs/third-party/move-bytecode-verifier-meter",
    "rs/third-party/move-vm-config",
    "rs/third-party/move-ir-to-bytecode-syntax",
    "rs/third-party/move-docgen",
    "rs/third-party/move-package",
    "rs/third-party/move-stdlib-natives",
    "rs/third-party/move-cli",
    "rs/third-party/move-unit-test",
    "rs/third-party/move-disassembler",
    "rs/third-party/move-coverage",
    "rs/third-party/move-bytecode-utils",
    "rs/third-party/move-vm-types",
    "rs/third-party/move-vm-runtime",
    "rs/third-party/move-trace-format",
    "rs/third-party/move-vm-profiler",
    "rs/third-party/move-ir-compiler",
    "rs/third-party/move-bytecode-viewer",
    "rs/third-party/move-vm-test-utils",
    "rs/third-party/move-prover-test-utils",
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
anyhow = "1.0.71"
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }
bcs = "0.1.4"
ethnum = "1.0.4"
hex = "0.4.3"
leb128 = "0.2.5"
move-proc-macros = { path = "rs/third-party/move-proc-macros" }
num = "0.4.0"
once_cell = "1.18.0"
primitive-types = { version = "0.10.1", features = ["impl-serde"] }
proptest = "1.6.0"
proptest-derive = "0.5"
rand = "0.8.5"
ref-cast = "1.0.6"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-env = "0.2.0"
serde-name = "0.2.1"
serde-reflection = "0.5"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_repr = "0.1"
serde_test = "1.0.147"
serde_with = "3.8"
serde_yaml = "0.8.26"
serde_bytes = "0.11.5"
enum-compat-util = { path = "rs/third-party/enum-compat-util" }
thiserror = "1.0.40"
uint = "0.9.4"
regex = "1.7.1"
quote = "1.0.23"
move-command-line-common = { path = "rs/third-party/move-command-line-common" }
move-core-types = { path = "rs/third-party/move-core-types" }
move-symbol-pool = { path = "rs/third-party/move-symbol-pool" }
difference = "2.0.0"
dirs-next = "2.0.0"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
insta-cmd = "0.6.0"
move-binary-format = { path = "rs/third-party/move-binary-format" }
sha2 = "0.9.3"
sha3 = "0.9.1"
vfs = "0.10.0"
walkdir = "2.5.0"
getrandom = "0.2.9"
variant_count = "1.1.0"
phf = { version = "0.11", features = ["macros"] }
move-ir-types = { path = "rs/third-party/move-ir-types" }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
codespan-reporting = "0.11.1"
dunce = "1.0.2"
lsp-types = "0.95.1"
move-borrow-graph = { path = "rs/third-party/move-borrow-graph" }
move-bytecode-source-map = { path = "rs/third-party/move-bytecode-source-map" }
move-bytecode-verifier = { path = "rs/third-party/move-bytecode-verifier" }
move-ir-to-bytecode = { path = "rs/third-party/move-ir-to-bytecode" }
petgraph = "0.5.1"
rayon = "1.5.3"
similar = "2.4.0"
stacker = "0.1.15"
tempfile = "3.3.0"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
move-stdlib = { path = "rs/third-party/move-stdlib" }
move-abstract-interpreter = { path = "rs/third-party/move-abstract-interpreter" }
move-abstract-stack = { path = "rs/third-party/move-abstract-stack" }
move-bytecode-verifier-meter = { path = "rs/third-party/move-bytecode-verifier-meter" }
move-vm-config = { path = "rs/third-party/move-vm-config" }
hex-literal = "0.3.4"
itertools = "0.13.0"
log = { version = "0.4.14", features = ["serde"] }
move-ir-to-bytecode-syntax = { path = "rs/third-party/move-ir-to-bytecode-syntax" }
ouroboros = "0.17"
move-docgen = { path = "rs/third-party/move-docgen" }
move-package = { path = "rs/third-party/move-package" }
move-stdlib-natives = { path = "rs/third-party/move-stdlib-natives" }
dir-diff = "0.3.2"
file_diff = "1.0.0"
move-cli = { path = "rs/third-party/move-cli" }
move-unit-test = { path = "rs/third-party/move-unit-test" }
codespan = "0.11.1"
move-compiler = { path = "rs/third-party/move-compiler" }
move-model-2 = { path = "rs/third-party/move-model-2" }
move-disassembler = { path = "rs/third-party/move-disassembler" }
inline_colorization = "0.1.6"
move-coverage = { path = "rs/third-party/move-coverage" }
colored = "2.0.0"
indexmap = { version = "2.1.0", features = ["serde"] }
move-bytecode-utils = { path = "rs/third-party/move-bytecode-utils" }
named-lock = "0.2.0"
toml = { version = "0.7.4", features = ["preserve_order"] }
toml_edit = { version = "0.19.10" }
treeline = "0.1.0"
whoami = { version = "1.2.1" }
move-vm-types = { path = "rs/third-party/move-vm-types" }
smallvec = "1.10.0"
better_any = "0.1.1"
fail = "0.4.0"
move-trace-format = { path = "rs/third-party/move-trace-format" }
move-vm-profiler = { path = "rs/third-party/move-vm-profiler" }
parking_lot = "0.12.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
    "std",
    "smallvec",
    "fmt",
    "ansi",
    "time",
    "json",
    "registry",
    "env-filter",
] }
move-ir-compiler = { path = "rs/third-party/move-ir-compiler" }
move-bytecode-viewer = { path = "rs/third-party/move-bytecode-viewer" }
move-vm-runtime = { path = "rs/third-party/move-vm-runtime" }
move-vm-test-utils = { path = "rs/third-party/move-vm-test-utils" }

crossterm = "0.25.0"
tui = "0.19.0"
move-model = { path = "rs/third-party/move-model" }
move-prover-test-utils = { path = "rs/third-party/move-prover-test-utils" }
prettydiff = "0.4.0"
im = "15"
move-stackless-bytecode ={ path = "rs/third-party/move-stackless-bytecode" }
