[package]
name = "dominion-protector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { version = "1.43.0", features = ["full"] }
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
move_binary_format = { git = "https://github.com/mystenlabs/sui", package = "move-binary-format"}
move_core_types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types"}
move_model= { git = "https://github.com/mystenlabs/sui", package = "move-model-2"}
clap.workspace = true
uuid = { version = "1.13.1", features = ["v4"] }
tempfile = "3.16.0"
openai_dive = "0.7.3"
serde_json = "1.0.138"
serde_yml = "0.0.12"
serde = { version = "1.0.217", features = ["derive"] }
axum = "0.8.1"
sqlx = { version = "0.8.3", features = ["chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
chrono = "0.4.39"
