[package]
name = "dominion-protector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { version = "1.44.2", features = ["full"] }
sui-sdk = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm"}
sui-config = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm"}
sui-keys = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm"}
move-binary-format = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm"}
move-core-types = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm"}
move_model= { git = "https://github.com/aankor/sui.git", package = "move-model-2", branch = "safe-disasm"}
sui-types = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
move-disassembler = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
move-ir-types = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
move-bytecode-source-map = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
move-bytecode-utils = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
clap.workspace = true
uuid = { version = "1.13.1", features = ["v4"] }
tempfile = "3.16.0"
openai_dive = "0.7.3"
serde_json = "1.0.138"
serde_yml = "0.0.12"
serde = { version = "1.0.217", features = ["derive"] }
axum = "0.8.1"
sqlx = { version = "0.8.3", features = ["chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
chrono = "0.4.39"
