[package]
name = "snapshot-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dominion-protector = { version = "0.1.0", path = "../dominion-protector" }
sui-core = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
sui-snapshot = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
sui-types = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
tokio = { version = "1.44.2", features = ["full"] }
